--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>Untitled Document.md</title><style></style></head><body id="preview">
 <p class="has-line-data" data-line-start="0" data-line-end="1">client facing digital work</p>
 <p class="has-line-data" data-line-start="2" data-line-end="3"><strong>Cloudmunch:</strong>  I worked on building a DevOps management tool for enterprise customers. It was primarily a client-side JavaScript app (PHP backend), built with Backbone.js, Sass and Grunt, and unfortunately I can’t send you a link because it’s yet to be publicly released (and I signed an NDA).</p>
 <p class="has-line-data" data-line-start="4" data-line-end="5">Here’s a screenshot, though:</p>
@@ -10,3 +12,5 @@
 <p class="has-line-data" data-line-start="19" data-line-end="20"><img src="http://i.imgur.com/rwvMdVW.gif" alt="the gifys"></p>
 <p class="has-line-data" data-line-start="21" data-line-end="22">The site (which I built with Node/Express) was even a <a href="http://webbyawards.com/winners/2014/web/general-website/weird/the-gifys/">2014 Webby Award Winner</a>. It was a super fun and rewarding collaboration with smart, funny, and creative people, and is one of my favorite things I’ve made on the internet.</p>
 <p class="has-line-data" data-line-start="23" data-line-end="24"><img src="http://i.imgur.com/y8NttXM.gif" alt="much excite"></p>
+
+</body></html>
